[package]
name = "mensatt-img"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.7", features = ["multipart"] }
axum-extra = { version = "0.10.3", features = ["typed-header"]}
config = "0.15.18"
env_logger = "0.11.8"
libvips = "1.7.0"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
